kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
spec:
  selector:
    matchLabels:
      app: front
      tier: frontend
      track: stable
  template:
    metadata:
      labels:
        app: front
        tier: frontend
        track: stable
    spec:
      containers:
        - name: front
          image: kasvith/nuxt-test:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
