kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  selector:
    app: front
    tier: frontend
    track: stable
  ports:
    - protocol: TCP
      port: 3000
      targetPort: http
